# copyable_function

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: pull_request_template.md
examples/: CMakeLists.txt  sample_usage.cpp
